kube/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels: 
    app: rails-kube-app
spec:
  ports:
    - port: 5432
  selector:
    app: rails-kube-app
    tier: database
