kube/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: rails-kube-app
spec:
  ports:
    - port: 6379
  selector:
    app: rails-kube-app
    tier: cache
