kube/sidekiq.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidekiq
  labels:
    app: rails-kube-app
spec:
  selector:
    app: rails-kube-app
    tier: sidekiq
